--- a/src/public/addEmploye/employeForm.html
+++ b/src/public/addEmploye/employeForm.html
@@ -4,27 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/public/addEmploye/employeFrom.css" />
+    <link rel="stylesheet" href="/public/addEmploye/employeFrom.css" />
     <title>Add New Employe</title>
   </head>
   <body>
-    <form id="addEForm">
-      <h1>add employe info</h1>
-      <label for="name">Name: <input name="name" id="name" /> </label>
-      <label for="company"
-        >Company Name: <input name="company" id="company" />
-      </label>
-      <label for="job"
-        >Job Title:
-        <input name="job" id="job" />
-      </label>
-      <label for="phone"
-        >Phone Number: <input name="phone" id="phone" />
-      </label>
-      <label for="email">Email: <input name="email" id="email" /> </label>
-      <output id="errortext"></output>
-      <button type="submit">Add</button>
-    </form>
-    <script src="/src/public/addEmploye/employeForm.js"></script>
+    <header>
+      <div class="container">
+        <img src="/public/favico.png" alt="logo" class="logo" />
+        <nav>
+          <ul>
+            <li><a href="/public/firstPage.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li>
+              <a href="/public/addCarFrom/addCar.html">Add New Car</a>
+            </li>
+            <li>
+              <a href="/public/addEmploye/employeForm.html">Add New Employe</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="body">
+      <form id="addEForm">
+        <h1>add employe info</h1>
+        <label for="name">Name: <input name="name" id="name" /> </label>
+        <label for="company"
+          >Company Name: <input name="company" id="company" />
+        </label>
+        <label for="job"
+          >Job Title:
+          <input name="job" id="job" />
+        </label>
+        <label for="phone"
+          >Phone Number: <input name="phone" id="phone" />
+        </label>
+        <label for="email">Email: <input name="email" id="email" /> </label>
+        <output id="errortext"></output>
+        <button type="submit">Add</button>
+      </form>
+    </div>
+    <script src="/public/addEmploye/employeForm.js"></script>
   </body>
 </html>
