--- a/src/public/firstPage.html
+++ b/src/public/firstPage.html
@@ -9,6 +9,23 @@
   </head>
 
   <body>
+    <header>
+      <div class="container">
+        <img src="/public/favico.png" alt="logo" class="logo" />
+        <nav>
+          <ul>
+            <li><a href="/public/firstPage.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li>
+              <a href="/public/addCarFrom/addCar.html">Add New Car</a>
+            </li>
+            <li>
+              <a href="/public/addEmploye/employeForm.html">Add New Employe</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <h1>search cars</h1>
 
     <form id="form" action="car">
