--- a/src/public/thirdPage.html
+++ b/src/public/thirdPage.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/public/favico.png" />
     <link rel="stylesheet" href="/public/car-data.css" />
     <title>cars result</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <header>
+      <div class="container">
+        <img src="/public/favico.png" alt="logo" class="logo" />
+        <nav>
+          <ul>
+            <li><a href="/public/firstPage.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li>
+              <a href="/public/addCarFrom/addCar.html">Add New Car</a>
+            </li>
+            <li>
+              <a href="/public/addEmploye/employeForm.html">Add New Employe</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div id="body">
-        <div id="title">
-            <div id="flag">
-                <img id="flagImg" />
-
-            </div>
-
-            <div id="companyName"></div>
-
-            <div id="icon">
-                <img id="carLogo" />
-
-            </div>
+      <div id="title">
+        <div id="flag">
+          <img id="flagImg" />
         </div>
 
-        
-        <div id="info">
-            <ul id="ulInfo">
+        <div id="companyName"></div>
 
-            </ul>
+        <div id="icon">
+          <img id="carLogo" />
         </div>
-        
+      </div>
+
+      <div id="info">
+        <ul id="ulInfo"></ul>
+      </div>
     </div>
 
     <script src="/public/thirdPage.js"></script>
-</body>
-
+  </body>
 </html>
