--- a/src/public/secondPage.html
+++ b/src/public/secondPage.html
@@ -12,6 +12,23 @@
     <title>cars result</title>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <img src="/public/favico.png" alt="logo" class="logo" />
+        <nav>
+          <ul>
+            <li><a href="/public/firstPage.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li>
+              <a href="/public/addCarFrom/addCar.html">Add New Car</a>
+            </li>
+            <li>
+              <a href="/public/addEmploye/employeForm.html">Add New Employe</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div id="body">
       <div id="title">
         <p>click the flag for more info about the country</p>
