--- a/src/public/firstPage.html
+++ b/src/public/firstPage.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>
+    <!-- <header>
       <div class="container">
         <img src="/public/favico.png" alt="logo" class="logo" />
         <nav>
@@ -25,7 +25,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
     <h1>search cars</h1>
 
     <form id="form" action="car">
