--- a/src/public/secondPage.html
+++ b/src/public/secondPage.html
@@ -12,7 +12,7 @@
     <title>cars result</title>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="container">
         <img src="/public/favico.png" alt="logo" class="logo" />
         <nav>
@@ -28,7 +28,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
     <div id="body">
       <div id="title">
         <p>click the flag for more info about the country</p>
