--- a/src/public/thirdPage.html
+++ b/src/public/thirdPage.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>
+    <!-- <header>
       <div class="container">
         <img src="/public/favico.png" alt="logo" class="logo" />
         <nav>
@@ -25,7 +25,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
     <div id="body">
       <div id="title">
         <div id="flag">
