--- a/src/public/country.html
+++ b/src/public/country.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/public/country.css" />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="container">
         <img src="/public/favico.png" alt="logo" class="logo" />
         <nav>
@@ -24,7 +24,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
     <div class="data">
       <output></output>
     </div>
